--- a/package.json
+++ b/package.json
@@ -13,19 +13,18 @@
     "@heroicons/react": "^1.0.6",
     "axios": "^0.27.2",
     "date-fns": "^2.29.1",
-    "next": "^11.1.2",
+    "eslint": "latest",
+    "eslint-plugin-next": "latest",
+    "next": "^12.1.6",
     "nvm": "^0.0.4",
     "objectify-array": "^2.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "react": "latest",
+    "react-dom": "latest",
     "react-router-dom": "^6.3.0",
-    "recharts": "2.1.12"
+    "recharts": "2.1.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
-    "eslint": "8.18.0",
-    "eslint-config-next": "12.2.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
   }
